# rust-a11n-a12n

./: .env.sample  .gitignore  Cargo.toml  readme.md
migrations/2019-09-03-231310_create_users/: up.sql
migrations/2019-09-17-065120_create_password_update/: down.sql  up.sql
src/: main.rs
src/api/: user.rs
src/database/: schema.rs
src/domain/user/: authenticate.rs  forgot_my_password.rs  identity_check.rs  mod.rs  sign_in.rs  sign_up.rs  sign_up_without_password.rs  update_password.rs
