[package]
name = "auto-chat-api"
version = "0.1.0"
authors = ["Farhan Ghazali <farhan_ghazali@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
actix-cors = "0.1.0"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
validator = "0.9.0"
validator_derive = "0.9.0"
diesel = { version = "1.4.2", features = ["mysql"] }
mysql = { version = "16.1.0", features = ["ssl"] }
dotenv = "0.14.1"
bcrypt = "0.5.0"
rand = "0.7.2"
jsonwebtoken = "6.0.1"
chrono = "0.4"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4.8"
env_logger = "0.6.2"
